# rostra

./: .aider.conf.yml  .gitignore  .typos.toml  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  README.hacking.md  README.md  assets  flake.nix  justfile  justfile.rostra.just  mutants.toml
.config/flakebox/: id
.config/selfci/: ci.sh
.github/: README.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml  flakebox-ci.yml
agents/skills/: rostra-web-api.md
crates/axum-dpc-static-assets/: Cargo.toml
crates/axum-dpc-static-assets/src/: lib.rs
crates/bots/rostra-bot/: Cargo.toml
crates/bots/rostra-bot-hn/: Cargo.toml
crates/bots/rostra-bot-hn/src/: database.rs  main.rs  publisher.rs  scraper.rs  tables.rs
crates/bots/rostra-bot/src/: database.rs  dedup.rs  lib.rs  main.rs  publisher.rs  scraper.rs  tables.rs
crates/bots/rostra-bot/tests/: dedup_integration.rs
crates/rostra/: Cargo.toml  build.rs
crates/rostra-cli/: Cargo.toml
crates/rostra-cli/src/: cli.rs  main.rs  pkarr_publish.rs
crates/rostra-client/: Cargo.toml
crates/rostra-client-db/: Cargo.toml
crates/rostra-client-db/docs/: content-lifecycle.md
crates/rostra-client-db/src/: events_content_missing_ops.rs  id_nodes_ops.rs  lib.rs  migration_ops.rs  news.rs  paginate.rs  process_event_content_ops.rs  process_event_ops.rs  social.rs  table_ops.rs  tables.rs  tests.rs  tx_ops.rs
crates/rostra-client-db/src/paginate/: tests.rs
crates/rostra-client-db/src/tables/: event.rs  id_self.rs  ids.rs
crates/rostra-client/src/: client.rs  connection_cache.rs  db.rs  error.rs  followee_checker.rs  followee_head_checker.rs  head_update_broadcaster.rs  id.rs  id_publisher.rs  lib.rs  multiclient.rs  net.rs  request_handler.rs  storage.rs  task.rs
crates/rostra-client/src/db/: social.rs  tables.rs  tests.rs  tx_ops.rs
crates/rostra-client/src/db/tables/: event.rs  events.rs  ids.rs
crates/rostra-client/src/storage/: social.rs
crates/rostra-client/src/task/: connection_cache.rs  followee_checker.rs  followee_head_checker.rs  head_merger.rs  head_update_broadcaster.rs  id_publisher.rs  missing_event_content_fetcher.rs  missing_event_fetcher.rs  new_head_fetcher.rs  news_score_updater.rs  pkarr_id_publisher.rs  poll_followee_head_updates.rs  poll_follower_head_updates.rs  request_handler.rs  wot_head_sync.rs
crates/rostra-client/src/util/: rpc.rs
crates/rostra-client/tests/: concurrent_rpcs.rs  download_events.rs
crates/rostra-core/: Cargo.toml
crates/rostra-core/benches/: event.rs
crates/rostra-core/src/: bincode.rs  event.rs  id.rs  lib.rs  macros.rs  rand.rs
crates/rostra-core/src/event/: bincode.rs  content.rs  content_kind.rs  dalek.rs  ed25519.rs  serde.rs  verified_event.rs
crates/rostra-core/src/event/bincode/: tests.rs
crates/rostra-core/src/event/content/: serde.rs
crates/rostra-core/src/event/content_kind/: tests.rs
crates/rostra-core/src/event/serde/: tests.rs
crates/rostra-core/src/id/: ed25519.rs  pkarr.rs  serde.rs
crates/rostra-djot/: Cargo.toml
crates/rostra-djot/src/: extract.rs  lib.rs  links.rs  mention.rs  tests.rs
crates/rostra-p2p/: Cargo.toml
crates/rostra-p2p-api/: Cargo.toml
crates/rostra-p2p-api/src/: lib.rs
crates/rostra-p2p/src/: connection.rs  error.rs  lib.rs  util.rs
crates/rostra-util/: Cargo.toml
crates/rostra-util-bind-addr/: Cargo.toml
crates/rostra-util-bind-addr/src/: lib.rs
crates/rostra-util-dedup-chan/: Cargo.toml
crates/rostra-util-dedup-chan/src/: lib.rs  tests.rs
crates/rostra-util-error/: Cargo.toml
crates/rostra-util-error/src/: fmt.rs  lib.rs
crates/rostra-util-fmt/: Cargo.toml
crates/rostra-util-fmt/src/: lib.rs
crates/rostra-util/src/: lib.rs
crates/rostra-web-ui/: Cargo.toml  build.rs
crates/rostra-web-ui/assets/: app.js  emoji-init.js  style.css
crates/rostra-web-ui/assets/icons/: README.md
crates/rostra-web-ui/assets/libs/text-field-edit/: index.js
crates/rostra-web-ui/src/: asset_cache.rs  asset_service.rs  error.rs  fragment.rs  html_utils.rs  is_htmx.rs  layout.rs  lib.rs  routes.rs  secrets.rs  serde_util.rs  session_token.rs
crates/rostra-web-ui/src/routes/: add_followee.rs  api.rs  avatar.rs  content.rs  cookies.rs  debug.rs  feeds.rs  fragment.rs  media.rs  new_post.rs  post.rs  profile.rs  profile_self.rs  search.rs  self_account.rs  settings.rs  shoutbox.rs  text_autocomplete.js  timeline.rs  unlock.rs  welcome.rs
crates/rostra-web-ui/src/routes/content/: filters.rs  tests.rs
crates/rostra-web-ui/src/routes/content/tests/: url_sanitization.rs  xss_sanitization.rs
crates/rostra-web-ui/src/routes/profile_self/: extractor.rs
crates/rostra-web-ui/src/routes/unlock/: session.rs
crates/rostra-web-ui/src/util/: mod.rs  time.rs
crates/rostra-web-ui/src/util/extractors/: ajax_request.rs  hx_request.rs  mod.rs
crates/rostra-web-ui/tests/: api.rs  smoke.rs
crates/rostra-web-ui/tests/common/: mod.rs
crates/rostra/src/: cli.rs  main.rs  web_ui.rs
crates/rostra/src/web_ui/: asset_cache.rs  error.rs  fragment.rs  routes.rs
crates/tower-sessions-redb-store/: Cargo.toml
crates/tower-sessions-redb-store/src/: lib.rs
docs/: FAQ.md  api-ui.md  comparison.md  design.md  web-api.md
docs/rostra-presenterm/: README.md  f2f-chart.jsx  rostra.md
licenses/: APACHE  MIT
nix/pkgs/: wild.nix
