[workspace]
members = [
  "crates/rostra-core",
  "crates/rostra-cli",
  "crates/rostra-client",
  "crates/rostra-p2p",
  "crates/rostra-p2p-api",
  "crates/rostra-util-error",
  "crates/rostra-util-fmt",
]
resolver = "2"

[workspace.package]
name = "rostra"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "f2fi, p2p social network"

[workspace.metadata]
name = "rostra"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.95"
backon = "1.3.0"
bao-tree = "0.13"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
blake3 = "1.5.5"
bon = "3.3.0"
bip39 = "2.0.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
convi = { version = "0.1.1" , features = [ "min_target_pointer_width_32" ] }
data-encoding = "2.6"
directories = "5"
ed25519-dalek = "2.1.1"
futures = "0.3.31"
futures-util = "*"
iroh-net = { version = "0.28.1", features = ["iroh-relay"] }
iroh-io = "0.6.0"
itertools = "0.13.0"
pkarr = "2.2.1"
rand = "0.8"
redb-bincode = { version = "0.2.1" }
rostra-core = { path = "crates/rostra-core" }
rostra-client = { path = "crates/rostra-client" }
rostra-p2p = { path = "crates/rostra-p2p" }
rostra-p2p-api = { path = "crates/rostra-p2p-api" }
rostra-util-error = { path = "crates/rostra-util-error" }
rostra-util-fmt = { path = "crates/rostra-util-fmt" }
serde = "1.0.216"
serde_json = "1.0.134"
snafu = { version = "0.8.5", features = ["rust_1_81"] }
tokio = { version = "1.42.0", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
z32 = "1.1.1"

[profile.dev]
debug = "line-tables-only"
lto = "off"

[profile.ci]
inherits = "dev"
incremental = false

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false

[patch.crates-io]
redb-bincode = { git = "https://github.com/dpc/redb-bincode", rev = "740ccad228281c2e4e180e99600b1723731590cd" }
