[workspace]
members = [
  "crates/rostra-core",
  "crates/rostra",
  "crates/rostra-client",
  "crates/rostra-client-db",
  "crates/rostra-p2p",
  "crates/rostra-p2p-api",
  "crates/rostra-util",
  "crates/rostra-util-dedup-chan",
  "crates/rostra-util-error",
  "crates/rostra-util-fmt",
  "crates/rostra-web-ui",
  "crates/axum-dpc-static-assets",
  "crates/bots/rostra-bot-hn",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR APACHE-2.0 OR MPL-2.0"
description = "A p2p (f2f) social network."

[workspace.lints.clippy]
collapsible_if = "allow"
collapsible_else_if = "allow"

[workspace.metadata]
name = "rostra"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-stream = "0.3.6"
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
axum-dpc-static-assets = { path = "crates/axum-dpc-static-assets" }
axum-extra = { version = "0.10.0" }
backon = "1.3.0"
bao-tree = "0.13"
bech32 = "0.11.0"
bincode = { version = "2.0.0", features = ["derive"] }
blake3 = "1.5.5"
brotli = "*"
bon = "3.3.0"
bip39 = "2.0.0"
cbor4ii = "1.0.0"
# ciborium = "0.2.2"
clap = { version = "4.5.23", features = ["derive", "env"] }
convi = { version = "0.1.1", features = ["min_target_pointer_width_32"] }
data-encoding = "2.7"
directories = "5"
divan = "0.1.18"
duct = "*"
ed25519-dalek = "2.1.1"
futures = "0.3.31"
bytes = "*"
listenfd = "1.0.2"
futures-util = "*"
iroh = { version = "0.91.2", default-features = false }
iroh-base = { version = "0.91.2", default-features = false }
iroh-io = "0.6.0"
itertools = "0.13.0"
jotdown = "0.7.0"
pkarr = "3.0.0"
proptest = "1.6.0"
maud = "*"
tempfile = "3.14.0"
test-log = { version = "0.2.16", features = ["trace"] }
rand = "0.8"
redb = "2.3.0"
redb-bincode = "0.3.0"
rostra-core = { path = "crates/rostra-core" }
rostra-client = { path = "crates/rostra-client" }
rostra-client-db = { path = "crates/rostra-client-db" }
rostra-p2p = { path = "crates/rostra-p2p" }
rostra-p2p-api = { path = "crates/rostra-p2p-api" }
rostra-util = { path = "crates/rostra-util" }
# rostra-util-dedup-chan = { path = "crates/rostra-util-dedup-chan" }
dedup-chan = { path = "crates/rostra-util-dedup-chan", package = "rostra-util-dedup-chan" }
rostra-util-error = { path = "crates/rostra-util-error" }
rostra-util-fmt = { path = "crates/rostra-util-fmt" }
rostra-web-ui = { path = "crates/rostra-web-ui" }
serde = "1.0.216"
serde_bytes = "0.11.15"
serde_json = "1.0.134"
unicode-segmentation = "1.12.0"
url = "2.5.4"
snafu = { version = "0.8.5", features = ["rust_1_81"] }
time = "0.3.36"
tokio = { version = "1.42.0", features = ["macros"] }
tokio-stream = "*"
tower = "*"
tower-cookies = "*"
tower-http = "0.5"
tower-sessions = "0.14.0"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
z32 = "1.1.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
scraper = "0.20"


[profile.dev]
debug = "line-tables-only"
lto = "off"
incremental = true

[profile.dev.package."*"] # external dependencies
opt-level = 1

[profile.dev.package]
ring = { opt-level = 2 }
redb = { opt-level = 2 }
ed25519 = { opt-level = 2 }
ed25519-dalek = { opt-level = 2 }
brotli = { opt-level = 2 }
brotli-decompressor = { opt-level = 2 }
data-encoding = { opt-level = 2 }
tokio = { opt-level = 2 }
serde = { opt-level = 2 }
serde_derive = { opt-level = 3 }

[profile.ci]
inherits = "dev"
incremental = false

[profile.release]
# debug = "line-tables-only"
# super-slow, and we don't need so much speed
# lto = "fat"
# codegen-units = 1

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false

[patch.crates-io]
redb-bincode = { git = "https://github.com/rustshop/redb-bincode", rev = "b33cedb787d452dc3735a153aca55086fea7c306" }
