[package]
name = "rostra-client-db"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
backon = { workspace = true }
bincode = { workspace = true }
convi = { workspace = true }
bon = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
iroh-base = { workspace = true, features = ["ticket"] }
iroh = { workspace = true }
iroh-io = { workspace = true }
itertools = { workspace = true }
redb = { workspace = true }
redb-bincode = { workspace = true }
rostra-p2p = { workspace = true }
rostra-p2p-api = { workspace = true }
rostra-core = { workspace = true, features = [
  "ed25519-dalek",
  "pkarr",
  "bincode",
  "serde",
  "rand",
] }
rostra-util-error = { workspace = true }
rostra-util-fmt = { workspace = true }
rostra-util = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
