[package]
name = "rostra-client"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
data-encoding = { workspace = true }
futures = { workspace = true }
iroh-net = { workspace = true }
itertools = { workspace = true }
pkarr = { workspace = true, features = ["async"] }
rostra-p2p = { workspace = true }
rostra-p2p-api = { workspace = true }
rostra-core = { workspace = true, features = ["ed25519-dalek", "pkarr", "bincode", "serde"] }
serde = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
