[package]
name = "rostra-client"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
backon = { workspace = true }
bincode = { workspace = true }
bao-tree = { workspace = true }
convi = { workspace = true }
bon = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
iroh-net = { workspace = true }
iroh-io = { workspace = true }
itertools = { workspace = true }
pkarr = { workspace = true, features = ["async", "relay"] }
redb = "2.3.0"
redb-bincode = "0.2.1"
rostra-p2p = { workspace = true }
rostra-p2p-api = { workspace = true }
rostra-core = { workspace = true, features = [
  "ed25519-dalek",
  "pkarr",
  "bincode",
  "serde",
] }
rostra-util-error = { workspace = true }
rostra-util-fmt = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
