[package]
name = "rostra-core"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = []
bincode = ["dep:bincode"]
ed25519-dalek = ["dep:ed25519-dalek", "dep:rand"]
serde = ["dep:serde", "dep:ciborium",  "dep:bip39"]
rand = ["dep:rand"]

[dependencies]
bech32 = { workspace = true }
bincode = { workspace = true, optional = true }
bip39 = { workspace = true, optional = true }
blake3 = { workspace = true }
bon = { workspace = true }
convi = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
ciborium = { workspace = true, optional = true }
snafu = { workspace = true }
pkarr = { workspace = true, optional = true }
z32 = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
serde_json = { workspace = true }
tracing = { workspace = true }
