[package]
name = "rostra-core"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
default = []
bincode = ["dep:bincode"]
ed25519-dalek = ["dep:ed25519-dalek", "dep:rand"]
serde = [
  "dep:serde",
  "dep:bip39",
  "dep:serde_bytes",
  # "dep:ciborium",
  "dep:cbor4ii",
  "cbor4ii/serde1",
  "cbor4ii/use_std",
]
rand = ["dep:rand"]

[[bench]]
name = "event"
harness = false

[dependencies]
bech32 = { workspace = true }
bincode = { workspace = true, optional = true }
bip39 = { workspace = true, optional = true }
blake3 = { workspace = true }
bon = { workspace = true }
convi = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
# ciborium = { workspace = true, optional = true }
cbor4ii = { workspace = true, optional = true, features = ["serde1"] }
snafu = { workspace = true }
pkarr = { workspace = true, optional = true }
time = { workspace = true }
unicode-segmentation = { workspace = true }
z32 = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
