[package]
name = "rostra-djot"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
jotup = { workspace = true }
rostra-core = { workspace = true }
