[package]
name = "rostra-p2p-api"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
iroh = { workspace = true }
pkarr = { workspace = true, features = ["async"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
