[package]
name = "rostra-p2p"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bao-tree = { workspace = true }
bincode = { workspace = true }
convi = { workspace = true }
futures = { workspace = true }
iroh-io = { workspace = true }
iroh = { workspace = true }
pkarr = { workspace = true, features = ["async"] }
rostra-core = { workspace = true, features = ["bincode"] }
rostra-util-error = { workspace = true }
serde = { workspace = true, optional = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
