[package]
name = "rostra-web-ui"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
brotli = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
jotdown = { workspace = true }
maud = { workspace = true }
snafu = { workspace = true }
rostra-core = { workspace = true }
rostra-client = { workspace = true }
rostra-client-db = { workspace = true }
rostra-p2p = { workspace = true, features = ["serde"] }
rostra-p2p-api = { workspace = true }
rostra-util = { workspace = true }
rostra-util-error = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["fs"] }
tower-http = { workspace = true, features = ["cors", "compression-br", "fs"] }
tower-sessions = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
