[package]
name = "rostra-web-ui"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
atom_syndication = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws", "multipart"] }
axum-extra = { workspace = true, features = ["form"] }
axum-dpc-static-assets = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
brotli = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
jotup = { workspace = true }
maud = { workspace = true }
listenfd = { workspace = true }
redb = { workspace = true }
redb-bincode = { workspace = true }
snafu = { workspace = true }
rostra-core = { workspace = true }
rostra-djot = { workspace = true }
rostra-client = { workspace = true }
rostra-client-db = { workspace = true }
rostra-p2p = { workspace = true, features = ["serde"] }
rostra-p2p-api = { workspace = true }
rostra-util = { workspace = true }
rostra-util-bind-addr = { workspace = true }
rostra-util-error = { workspace = true }
rostra-util-fmt = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["fs"] }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-service = { workspace = true }
tower-http = { workspace = true, features = ["cors", "compression-br", "fs"] }
tower-sessions = { workspace = true }
tower-sessions-core = { workspace = true }
tower-sessions-redb-store = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
