[package]
name = "rostra"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[[bin]]
name = "rostra"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
brotli = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
maud = { workspace = true }
iroh = { workspace = true, default-features = false }
pkarr = { workspace = true, features = ["async"] }
snafu = { workspace = true }
rostra-core = { workspace = true }
rostra-client = { workspace = true }
rostra-p2p = { workspace = true, features = ["serde"] }
rostra-p2p-api = { workspace = true }
rostra-util-error = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["fs"] }
tower-http = { workspace = true, features = ["cors", "compression-br", "fs" ] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
