[package]
name = "rostra"

description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "rostra"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
duct = { workspace = true }
iroh = { workspace = true, default-features = false }
snafu = { workspace = true }
rostra-core = { workspace = true }
rostra-client = { workspace = true }
rostra-client-db = { workspace = true }
rostra-p2p = { workspace = true, features = ["serde"] }
rostra-p2p-api = { workspace = true }
rostra-util-bind-addr = { workspace = true }
rostra-util-error = { workspace = true }
rostra-web-ui  = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
